layout issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Poppins:wght@300;400;500;700");
+@import url(component/footer.css);
+@import url(component/button.css);
+@import url(component/avatar.css);
+
 body {
   /* background:#000000; */
   color:#575F7D;
@@ -13,7 +17,7 @@ h1,h2,h3 {
 }
 
 h1{
-  color:#4f5363;
+  color:#ffffff;
   font-size: 32px;
   font-weight: 900;
 }
